manifests/ecom.yaml
---
# 2. Backend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-api
  namespace: demo
  labels:
    app: backend-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-api
  template:
    metadata:
      labels:
        app: backend-api
    spec:
      containers:
      - name: backend
        image: kabhinyasri1911/ecommerce-backend:v3
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: sqlite-storage
          mountPath: /app/data
      volumes:
      - name: sqlite-storage
        persistentVolumeClaim:
          claimName: sqlite-data-pvc
---
# 3. Backend Service (Internal Only)
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: demo
spec:
  selector:
    app: backend-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
---
# 4. Frontend Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-app
  namespace: demo
  labels:
    app: frontend-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-app
  template:
    metadata:
      labels:
        app: frontend-app
    spec:
      containers:
      - name: frontend
        image: kabhinyasri1911/ecommerce-frontend:v3
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "500m"
---
# 5. Frontend Service (Internal Only)
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: demo
spec:
  # Notice: 'type: LoadBalancer' was removed. 
  # This makes it a standard internal ClusterIP.
  selector:
    app: frontend-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
---
---
# 6. The Ingress Controller (The Smart Front Door)
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-ingress
  namespace: demo
spec:
  ingressClassName: kommander-traefik
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port: 
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port: 
              number: 80
